# Object-Oriented-Programming

A89_Qt/: CMakeLists.txt  main.cpp
A89_Qt/GUI/: AdminGUI.h  SlideShow.cpp  SlideShow.h  UserGUI.cpp  UserGUI.h  WelcomeGUI.cpp  WelcomeGUI.h
A89_Qt/Repository/: FileAdoptList.cpp  Repo.h
Dog_Adoption/: Dogs.txt  README.md
Dog_Adoption/Domain/: Dog.cpp  Dog.h
Dog_Adoption/GUI/: AdminGUI.cpp  MainGUI.cpp  MainGUI.h
Dog_Adoption/Repository/: CSVAdoptList.cpp  CSVAdoptList.h  HTMLAdoptList.cpp  Repo.cpp  RepoException.cpp  RepoException.h
Dog_Adoption/Service/: Service.cpp  Service.h
a1-NikAlien/: A1.c  a.out
a23-NikAlien/: main  main.c  test  test.c
a23-NikAlien/Domain/: Offer.c  Offer.h
a23-NikAlien/Repo/: DynamicArray.c  DynamicArray.h  Repo.c  Repo.h
a23-NikAlien/Service/: Service.c  Service.h
a23-NikAlien/UI/: UI.c  UI.h
a23-NikAlien/UndoRedo/: UndoRedo.c  UndoRedo.h
a45-NikAlien/: CMakeLists.txt  main.cpp
a45-NikAlien/Domain/: Dog.cpp  Dog.h
a45-NikAlien/Repository/: DynamicArray.h  Repo.cpp  Repo.h
a45-NikAlien/Service/: Service.cpp  Service.h
a45-NikAlien/Tests/: test.cpp
a45-NikAlien/UI/: UIAdmin.cpp  UIAdmin.h  UIUser.cpp  UIUser.h
a6-NikAlien-1/: CMakeLists.txt  main.cpp
a6-NikAlien-1/Domain/: Dog.h
a6-NikAlien-1/Repository/: Repo.cpp  Repo.h
a6-NikAlien-1/Service/: Service.cpp  Service.h
a6-NikAlien-1/Tests/: test.cpp
a6-NikAlien-1/UI/: UIAdmin.cpp  UIMain.h  UIUser.cpp  UIUser.h
a7-NikAlien-1/: CMakeLists.txt  main.cpp
a7-NikAlien-1/Domain/: Dog.cpp  Dog.h  DogValidator.cpp  DogValidator.h
a7-NikAlien-1/Repository/: CSVAdoptList.cpp  FileAdoptList.h  HTMLAdoptList.cpp  HTMLAdoptList.h  Repo.cpp  Repo.h
a7-NikAlien-1/Service/: Service.cpp  Service.h
a7-NikAlien-1/UI/: UIAdmin.cpp  UIAdmin.h  UIMain.cpp  UIMain.h  UIUser.cpp  UIUser.h
e911-NikAlien/: BacteriaModel.cpp  BacteriaModel.h  Bacterium.cpp  Bacterium.h  Biologist.cpp  Biologist.h  CMakeLists.txt  RepoBacteria.cpp  RepoBacteria.h  RepoBiologist.cpp  RepoBiologist.h  Service.cpp  Service.h  bacteria.txt  biologist.txt  gui.cpp  gui.h  gui.ui  main.cpp
t1-NikAlien-1/: CMakeLists.txt  main.cpp
t1-NikAlien-1/Domain/: Protein.cpp  Protein.h
t1-NikAlien-1/Repo/: Repo.cpp  Repo.h
t1-NikAlien-1/Service/: Serv.cpp  Serv.h
t1-NikAlien-1/UI/: UI.cpp  UI.h
t2-NikAlien-1/: CMakeLists.txt  Car.cpp  Car.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
t2-NikAlien-1/Engine/: Electric.cpp  Electric.h  Engine.cpp  Engine.h  Turbo.cpp  Turbo.h
t3-NikAlien/src/: CMakeLists.txt  doc.txt  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  (+5 more)
(+6 files in other folders)
